# pulsefi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/analytics-worker/: Cargo.toml
crates/analytics-worker/src/: aggregates.rs  alerts.rs  main.rs  redis_publisher.rs  whale.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: main.rs  state.rs  websocket.rs
crates/api-server/src/routes/: alerts.rs  health.rs  markets.rs  trades.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  logging.rs
crates/common/src/db/: clickhouse.rs  postgres.rs  redis.rs
crates/common/src/types/: alerts.rs  evm.rs  hyperliquid.rs
crates/evm-indexer/: Cargo.toml
crates/evm-indexer/src/: backfill.rs  checkpoint.rs  decoder.rs  live.rs  main.rs  writer.rs
crates/hyperliquid-ingestor/: Cargo.toml
crates/hyperliquid-ingestor/src/: main.rs  normalizer.rs  parser.rs  websocket.rs  writer.rs
docs/: architecture.md  data-flow.md  decisions.md  learning-notes.md
infra/clickhouse/: init.sql
