[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/evm-indexer",
    "crates/hyperliquid-ingestor",
    "crates/analytics-worker",
    "crates/api-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Soham Vijay"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
dotenvy = "0.15"