[package]
name = "api-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
common = { path = "../common" }

tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }

axum = "0.7"
tower-http = "0.6"
redis = { version = "0.27", features = ["tokio-comp"] }
clickhouse = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls"] }