[package]
name = "evm-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }

ethers = "2"
clickhouse = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls"] }